--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,28 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.ts"
   },
+  "nodemonConfig": {
+    "ext": "ts",
+    "exec": "ts-node index.ts",
+    "ignore": [
+      "node_modules",
+      "tsconfig.json",
+      "package.json",
+      "package-lock.json"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.299.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "aws-sdk": "^2.1343.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1"
