--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -40,6 +41,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.3",
+    "@types/uuid": "^9.0.1",
     "typescript": "^4.9.5"
   },
   "type": "module"
