--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
     "gh-pages": "^5.0.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.3.1"
   }
 }
